# sp1-image-gen

./: .gitignore  README.md  vercel.json
backend/: .env  package-lock.json  package.json  server.js
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
web/: app.js  index.html  retro-pink.css  sp1-bridge.js  styles.css  test.html  verify.html  verify.js
